# ROS2-and-PX4-Swarm-Controlling

./: .gitattributes  .gitignore  README.md  activate_path_planner.sh  backup.md  generate_readme.py  last_commit.txt  notlar.txt  sample_action_clients.md  sample_interface.txt  screencast.webm  yarinin_notlari.md
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/action/: MoveDrone.action
custom_interfaces/log/: latest_list
custom_interfaces/msg/: AltitudeChange.msg  DroneInfo.msg  (+14 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
px4_ros_com/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  start_multi_drones.sh
px4_ros_com/.github/workflows/: build.yml
px4_ros_com/config/: multi_robot_params.yaml
px4_ros_com/include/px4_ros_com/: frame_transforms.h
px4_ros_com/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
px4_ros_com/install/px4_ros_com/lib/px4_ros_com/: swarm_member_path_planner
px4_ros_com/install/px4_ros_com/local/lib/python3.10/dist-packages/px4_ros_com-0.1.0-py3.10.egg-info/: SOURCES.txt  top_level.txt
px4_ros_com/install/px4_ros_com/share/ament_index/resource_index/package_run_dependencies/: px4_ros_com
px4_ros_com/install/px4_ros_com/share/ament_index/resource_index/parent_prefix_path/: px4_ros_com
px4_ros_com/install/px4_ros_com/share/px4_ros_com/: local_setup.sh  package.sh  package.xml
px4_ros_com/install/px4_ros_com/share/px4_ros_com/config/: multi_robot_params.yaml
px4_ros_com/launch/: ground_control.py  multi_robot_start.py  multi_robot_start.xml
px4_ros_com/log/: latest_build
px4_ros_com/scripts/: build_all.bash  build_ros2_workspace.bash  setup_system.bash
px4_ros_com/src/controller/: swarm_communication.cpp  swarm_member_path_planner.cpp  uav_controller.cpp
px4_ros_com/src/controller/include/: offboard_controller.hpp
px4_ros_com/src/examples/advertisers/: debug_vect_advertiser.cpp
px4_ros_com/src/examples/listeners/: sensor_combined_listener.cpp  vehicle_gps_position_listener.cpp
px4_ros_com/src/examples/offboard/: offboard_control.cpp  offboard_control_srv.cpp
px4_ros_com/src/examples/offboard/controllers/: offboard_controller.hpp  vehicle_gps_position.hpp  vehicle_gps_position_listener.hpp
px4_ros_com/src/examples/offboard/offboard_py/: offboard_control.py
px4_ros_com/src/examples/offboard/services/: command_approvement.hpp
px4_ros_com/src/formulations/: CalculateCentralPoint.hpp  calculate_center_of_gravity.hpp  calculate_distance.hpp  calculate_offset_from_center.hpp  match_drone_with_offset.hpp
px4_ros_com/src/formulations/geographic/: calculate_center_of_gravity.hpp  calculate_distance.hpp  calculate_offset_from_center.hpp  lat_lon_user_input.hpp  match_drone_with_offset.hpp
px4_ros_com/src/formulations/path_planning/: PID.cpp  PID.hpp
px4_ros_com/src/interfaces/: vectoral_distance.hpp  vehicle_positions.hpp
px4_ros_com/src/lib/: frame_transforms.cpp
px4_ros_com/src/object_detection/: camera_bridge.py
px4_ros_com/src/offboard/: main_class.cpp
px4_ros_com/src/offboard/controllers/: offboard_controller.hpp
px4_ros_com/src/path_planner/: swarm_member_listener.cpp  swarm_member_path_planner.cpp
px4_ros_com/test/: pipeline_io_test.py  test_input.py  test_output.py
swarm_drone_control/: .gitattributes  .gitignore  CMakeLists.txt  README.md  package.xml  start_multi_drones.sh  start_single.sh
swarm_drone_control/.github/: dependabot.yml
swarm_drone_control/include/autonomous/: autonomous_utils.hpp  autonomous_utils_impl.hpp
swarm_drone_control/include/calculations/: PID.hpp  geographic.hpp  geographic_impl.hpp  spatial.hpp  spatial_impl.hpp  survey_plan.hpp  survey_plan_impl.hpp
swarm_drone_control/include/drone_core/: drone_core.hpp
swarm_drone_control/include/swarm_drone_control/: gamepad_controller.hpp  swarm_communication.hpp  swarm_member_path_planner.hpp  uav_controller.hpp
swarm_drone_control/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
swarm_drone_control/install/swarm_drone_control/share/swarm_drone_control/: package.dsv  package.ps1  package.sh
swarm_drone_control/launch/: ground_control.py  multi_robot_start.py  multi_robot_start.xml
swarm_drone_control/log/: latest_build
swarm_drone_control/src/: action_servers.cpp  commands.cpp  control.cpp  drone_core.cpp  main.cpp  state_cycle.cpp
swarm_drone_control/src/autonomous/: autonomous.cpp  autonomous.hpp  autonomous_col_avoid.cpp  autonomous_helpers.cpp  autonomous_missions.cpp  autonomous_process.cpp  autonomous_processes.cpp  autonomous_publishers.cpp  autonomous_subscribers.cpp  autonomous_timers.cpp  autonomous_utils.hpp
swarm_drone_control/src/autonomus/: autonomus.cpp  autonomus.hpp  autonomus_lifecycle.cpp  autonomus_main.cpp  autonomus_missions.cpp  autonomus_publishers.cpp  autonomus_services.cpp  autonomus_subscribers.cpp  autonomus_timers.cpp  autonomus_utils.hpp
swarm_drone_control/src/communication/: communication.cpp  communication.hpp  communication_main.cpp  communication_publishers.cpp  communication_subscribers.cpp  communication_timers.cpp
swarm_drone_control/src/controller/: controller.cpp  controller.hpp  controller_lifecycle.cpp  controller_listeners.cpp  controller_main.cpp  controller_publishers.cpp  controller_timers.cpp  gamepad_control.cpp  gamepad_controller.cpp  swarm_communication.cpp  swarm_member_path_planner.cpp  uav_controller.cpp
swarm_drone_control/src/formulations/geographic/: calculate_center_of_gravity.hpp  calculate_distance.hpp  calculate_offset_from_center.hpp
swarm_drone_control/src/ground_control/: change_state.cpp  formation_control.cpp  gamepad_control.py
swarm_drone_control/src/lib/: frame_transforms.cpp
swarm_drone_control/src/uav_controller/: uav_controller.cpp  uav_controller.hpp  uav_controller_main.cpp  uav_controller_publishers.cpp  uav_controller_timers.cpp
swarm_drone_control/swarm_drone_control/scripts/: action_client.py  camera_bridge.py  camera_bridge_lifecycle.py
swarm_drone_control/swarm_drone_control/scripts/ground_control/: main.py
(+45 files in other folders)
